--- a/lib/core/lang/ru.json
+++ b/lib/core/lang/ru.json
@@ -8,7 +8,7 @@
     "authInputPhoneNumber": "Номер телефона",
     "authCountry": "Страна",
     "otpEmail": "Проверьте почту",
-    "otpTitle": "Введите код, который пришёл на электронную почту salohiddink65@gmail.com.",
+    "otpTitle": "Введите код, который пришёл на электронную \n почту salohiddink65@gmail.com",
     "otpEmailWait": "Почта будет сброшена через 6 дней.",
     "otpSms": "Сбросить сейчас через СМС",
     "drawerNewGroup": "Создать группу",
