Regions and otp code added

--- a/lib/core/lang/ru.json
+++ b/lib/core/lang/ru.json
@@ -4,7 +4,7 @@
     "startLang": "Continue in English",
     "startButton": "Начать общение",
     "authPhoneNumber": "Номер телефона",
-    "authTitle": "Проверьте код страны и введите свой номер \n телефона.",
+    "authTitle": "Проверьте код страны и введите свой \n номер телефона.",
     "authInputPhoneNumber": "Номер телефона",
     "authCountry": "Страна",
     "authChooseCountry":"Выберите страну",
