menu pages 75% added

--- a/lib/core/lang/en.json
+++ b/lib/core/lang/en.json
@@ -1,23 +1,42 @@
 {
-    "telegram": "Telegram",
-    "startTitle": "The world's fastest messaging app.\n It is free and secure",
-    "startLang": "Продолжить на русском",
-    "startButton": "Start Messaging",
-    "authPhoneNumber": "Your phone number",
-    "authTitle": "Please confirm your country code \n and enter your phone number.",
-    "authInputPhoneNumber": "Phone number",
-    "authCountry": "Country",
-    "authChooseCountry":"Choose a country",
-    "otpEmail": "Check Your Email",
-    "otpTitle": "Please enter the code we have sent to your email \n salohiddink65@gmail.com.",
-    "otpEmailWait": "Email will be reset in 6 days.",
-    "otpSms": "Reset now via SMS",
-    "drawerNewGroup": "New Group",
-    "drawerContacts": "Contacts",
-    "drawerCalls": "Calls",
-    "drawerPeopleNearby": "People Nearby",
-    "drawerSavedMessages": "Saved Messages",
-    "drawerSettings": "Settings",
-    "drawerInviteFriends": "Invite Friends",
-    "drawerTelegramFeatures": "Telegram Features"
+  "telegram": "Telegram",
+  "startTitle": "The world's fastest messaging app.\n It is free and secure",
+  "startLang": "Продолжить на русском",
+  "startButton": "Start Messaging",
+  "authPhoneNumber": "Your phone number",
+  "authTitle": "Please confirm your country code \n and enter your phone number.",
+  "authInputPhoneNumber": "Phone number",
+  "authCountry": "Country",
+  "authChooseCountry": "Choose a country",
+  "otpEmail": "Check Your Email",
+  "otpTitle": "Please enter the code we have sent to your email \n salohiddink65@gmail.com.",
+  "otpEmailWait": "Email will be reset in 6 days.",
+  "otpSms": "Reset now via SMS",
+  "drawerNewGroup": "New Group",
+  "drawerContacts": "Contacts",
+  "contactsFindPeopleNearby": "Find People Nearby",
+  "contactsSortedByLastSeenTime": "Sorted by last seen time",
+  "drawerCalls": "Calls",
+  "drawerPeopleNearby": "People Nearby",
+  "drawerSavedMessages": "Saved Messages",
+  "drawerSettings": "Settings",
+  "drawerInviteFriends": "Invite Friends",
+  "drawerTelegramFeatures": "Telegram Features",
+  "menuSettingsOnline": "online",
+  "menuSettingsAccount": "Account",
+  "menuSettingsPhoneNumber": "Tap to change phone number",
+  "menuSettingsUserName": "Username",
+  "menuSettingsBio": "Bio",
+  "menuSettingsChatSettings": "Chat Settings",
+  "menuSettingsPrivacy": "Privacy and Security",
+  "menuSettingsNotifications": "Notifications and Sounds",
+  "menuSettingsData": "Data and Storage",
+  "menuSettingsPowerSaving": "Power Saving",
+  "menuSettingsChatFolders": "Chat Folders",
+  "menuSettingsDevices": "Devices",
+  "menuSettingsLanguage": "Language",
+  "menuSettingsHelp": "Help",
+  "menuSettingsAskQuestion": "Ask a Question",
+  "menuSettingsFAQ": "Telegram FAQ",
+  "menuSettingsPrivacyPolicy": "Privacy Policy"
 }
