--- a/lib/core/lang/ru.json
+++ b/lib/core/lang/ru.json
@@ -1,23 +1,42 @@
 {
-    "telegram": "Telegram",
-    "startTitle": "Самый быстрый мессенджер в мире. \n Бесплатный и безопасный",
-    "startLang": "Continue in English",
-    "startButton": "Начать общение",
-    "authPhoneNumber": "Номер телефона",
-    "authTitle": "Проверьте код страны и введите свой \n номер телефона.",
-    "authInputPhoneNumber": "Номер телефона",
-    "authCountry": "Страна",
-    "authChooseCountry":"Выберите страну",
-    "otpEmail": "Проверьте почту",
-    "otpTitle": "Введите код, который пришёл на электронную \n почту salohiddink65@gmail.com",
-    "otpEmailWait": "Почта будет сброшена через 6 дней.",
-    "otpSms": "Сбросить сейчас через СМС",
-    "drawerNewGroup": "Создать группу",
-    "drawerContacts": "Контакты",
-    "drawerCalls": "Звонки",
-    "drawerPeopleNearby": "Люди рядом",
-    "drawerSavedMessages": "Избранное",
-    "drawerSettings": "Настройки",
-    "drawerInviteFriends": "Пригласить друзей",
-    "drawerTelegramFeatures": "Возможности Telegram"
+  "telegram": "Telegram",
+  "startTitle": "Самый быстрый мессенджер в мире. \n Бесплатный и безопасный",
+  "startLang": "Continue in English",
+  "startButton": "Начать общение",
+  "authPhoneNumber": "Номер телефона",
+  "authTitle": "Проверьте код страны и введите свой \n номер телефона.",
+  "authInputPhoneNumber": "Номер телефона",
+  "authCountry": "Страна",
+  "authChooseCountry": "Выберите страну",
+  "otpEmail": "Проверьте почту",
+  "otpTitle": "Введите код, который пришёл на электронную \n почту salohiddink65@gmail.com",
+  "otpEmailWait": "Почта будет сброшена через 6 дней.",
+  "otpSms": "Сбросить сейчас через СМС",
+  "drawerNewGroup": "Создать группу",
+  "drawerContacts": "Контакты",
+  "contactsFindPeopleNearby": "Найти людей рядом",
+  "contactsSortedByLastSeenTime": "Сортировка по времени входа",
+  "drawerCalls": "Звонки",
+  "drawerPeopleNearby": "Люди рядом",
+  "drawerSavedMessages": "Избранное",
+  "drawerSettings": "Настройки",
+  "drawerInviteFriends": "Пригласить друзей",
+  "drawerTelegramFeatures": "Возможности Telegram",
+  "menuSettingsOnline": "в сети",
+  "menuSettingsAccount": "Аккаунт",
+  "menuSettingsPhoneNumber": "Нажмите, чтобы изменить номер телефона",
+  "menuSettingsUserName": "Имя пользователя",
+  "menuSettingsBio": "О себе",
+  "menuSettingsChatSettings": "Настройки чатов",
+  "menuSettingsPrivacy": "Конфиденциальность",
+  "menuSettingsNotifications": "Уведомления и звуки",
+  "menuSettingsData": "Данные и память",
+  "menuSettingsPowerSaving": "Энергосбережение",
+  "menuSettingsChatFolders": "Папки с чатами",
+  "menuSettingsDevices": "Устройства",
+  "menuSettingsLanguage": "Язык",
+  "menuSettingsHelp": "Помощь",
+  "menuSettingsAskQuestion": "Задать вопрос",
+  "menuSettingsFAQ": "Вопросы о Telegram",
+  "menuSettingsPrivacyPolicy": "Политика конфиденциальности"
 }
