--- a/lib/core/lang/ru.json
+++ b/lib/core/lang/ru.json
@@ -40,5 +40,7 @@
   "menuSettingsFAQ": "Вопросы о Telegram",
   "menuSettingsPrivacyPolicy": "Политика конфиденциальности",
   "menuNewGroupMembers": "до 200000 участников",
-  "menuNewGroupTextField": "Ково бы Вы хотели пригласить?"
+  "menuNewGroupTextField": "Ково бы Вы хотели пригласить?",
+  "menuInviteFriendsSearch": "Поиск контактов",
+  "menuInviteFriendsShareTelegram": "Пригласить в Telegram..."
 }
