Image upload success fully added👍👍👍

--- a/lib/core/lang/en.json
+++ b/lib/core/lang/en.json
@@ -42,5 +42,6 @@
   "menuNewGroupMembers": "up to 200000 members",
   "menuNewGroupTextField": "Who would you like to add?",
   "menuInviteFriendsSearch": "Search contacts",
-  "menuInviteFriendsShareTelegram": "Share Telegram..."
+  "menuInviteFriendsShareTelegram": "Share Telegram...",
+  "menuSettingsProfilePhoto": "Choose photo or video"
 }
